--- a/styles/temples.css
+++ b/styles/temples.css
@@ -71,6 +71,18 @@ figcaption {
   font-size: 1rem;
 }
 
+footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 20px 0;
+}
+
+footer p {
+  margin: 0;
+  font-size: 14px;
+}
+
 
 
   
