--- a/styles/place.css
+++ b/styles/place.css
@@ -27,6 +27,10 @@ body {
     padding: 20px;
 }
 
+.weather-icon::after {
+    content:  "⛅";
+    margin-left: 10px;
+}
 .green-stripe {
     background-color: var(--primary-green);
     height: 10px;
