--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -1,4 +1,4 @@
-/* Import fonts */
+/* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@400;500&display=swap');
 
 /* Custom properties for color schema */
@@ -30,7 +30,9 @@ body {
 }
 
 /* Typography */
-h1, h2, h3 {
+h1, 
+h2, 
+h3 {
     font-family: 'Playfair Display', serif;
     color: var(--primary-color);
 }
